# model_creator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
model_creator/: __init__.py  auto_review.py  exporters.py  file_dialog.py  inference.py  main.py  pose.py  schemas.py  storage.py  tracking.py  training.py  video.py
model_creator/app/: main.py
model_creator/core/: __init__.py  schemas.py  storage.py
model_creator/datasets/: __init__.py  exporters.py
model_creator/media/: __init__.py
model_creator/models/: __init__.py
model_creator/models/classification/: __init__.py  training.py
model_creator/models/object_detection/: __init__.py  auto_review.py  inference.py  tracking.py  training.py
model_creator/models/pose/: __init__.py  pose.py
model_creator/static/: app.js  index.html  styles.css
tests/: test_auto_review.py  test_classification.py  test_main_api.py  test_pose.py  test_project_export.py  test_tracking.py  test_training.py
